# agenticgovernance

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/grafana/dashboards/: governance-overview.json
docker/opa/policies/: agent_policy.rego
docker/prometheus/: prometheus.yml
docs/: 00-visao-geral.md  01-arquitetura.md  02-modelo-de-governanca.md  03-identidade-e-acesso.md  04-politica-como-codigo.md  05-observabilidade-e-auditoria.md  06-supervisao-humana.md  07-classificacao-de-risco.md  08-ciclo-de-vida.md  09-mapeamento-compliance.md  10-arquitetura-producao.md  11-guardrails-e-conteudo.md  12-supply-chain-e-mcp.md  13-memoria-e-a2a.md  14-camada-llm-agnostica.md
docs/adr/: ADR-001-politica-como-codigo.md  ADR-002-auditoria-hash-chain.md  ADR-003-default-deny.md  ADR-004-assinatura-ed25519.md  ADR-005-multi-tenancy.md  ADR-006-circuit-breaker.md  ADR-007-pii-masking.md  ADR-008-defesas-agenticas.md  ADR-009-neutralidade-de-provedor-llm.md
evals/: run_evals.py
evals/scenarios/: adversarial.py
examples/01_ungoverned_agent/: __main__.py
examples/02_governed_agent/: __main__.py
examples/03_multi_agent_delegation/: __main__.py
examples/04_high_risk_approval/: __main__.py
examples/05_production_stack/: __main__.py
examples/06_forensics/: __main__.py
examples/07_multi_tenant/: __main__.py
examples/08_compliance_report/: __main__.py
examples/09_guardrails/: __main__.py
examples/10_tool_integrity/: __main__.py
examples/11_memory_a2a/: __main__.py
examples/12_standards_report/: __main__.py
examples/13_llm_provider/: __main__.py
examples/_shared/: setup.py
policies/: default-deny.yaml  example-readonly-agent.yaml
policies/examples-rego/: README.md  agent_policy.rego
runbooks/: incident-response.md  kill-switch.md  revogar-credenciais-de-agente.md
src/governance/: __init__.py
src/governance/a2a/: __init__.py  channel.py
src/governance/anomaly/: __init__.py  detector.py
src/governance/approval/: __init__.py  gate.py  multi.py
src/governance/audit/: __init__.py  logger.py
src/governance/budget/: __init__.py  guard.py
src/governance/circuit_breaker/: __init__.py  breaker.py
src/governance/cli/: __init__.py  main.py
src/governance/compliance/: __init__.py  (+2 more)
tests/: test_a2a.py  test_anomaly.py  test_approval.py  test_audit.py  test_budget.py  test_circuit_breaker.py  test_cli.py  test_compliance.py  test_dryrun.py  test_forensics.py  test_guardrails.py  test_identity.py  test_llm_conformance.py  test_llm_governed.py  test_llm_provider.py  test_masking.py  test_memory.py  test_opa_client.py  test_policy.py  test_registry.py  test_runtime.py  test_runtime_phase8.py  test_semconv.py  test_signing.py  test_supply_chain.py  test_tenancy.py  test_vault.py
threat-model/: threat-model.md
(+43 files in other folders)
