[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-governance"
version = "0.1.0"
description = "Repositório de referência para governança de agentes de IA autônomos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Glauco Moraes" }]

dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
    "cryptography>=42.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
# Adapters de provedor — opcionais. A instalação base permanece offline;
# nenhum SDK de fornecedor é importado fora de governance.llm.adapters.
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
azure = ["openai>=1.40"]
ollama = ["ollama>=0.3"]

[project.scripts]
governance = "governance.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "E501"]
"examples/*" = ["ANN", "T201", "E501"]
"evals/*" = ["ANN", "T201", "E501"]
"src/governance/forensics/*" = ["E501"]
"src/governance/compliance/*" = ["E501"]
"src/governance/cli/*" = ["E501"]
"src/governance/guardrails/*" = ["E501"]
"src/governance/supply_chain/*" = ["E501"]

[tool.coverage.run]
source = ["src/governance"]
omit = ["*/tests/*"]
